[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/ski1.png" type="Texture" id=1]
[ext_resource path="res://Art/drag.png" type="Texture" id=2]
[ext_resource path="res://Art/fallen.png" type="Texture" id=4]
[ext_resource path="res://Skier.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Drag",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Skiing",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Fallen",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 14.0

[node name="Skier" type="Area2D" groups=["skiiers"]]
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Skiing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 1, 1.2 )

[node name="TripTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="input_event" from="." to="." method="_on_Skier_input_event"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TripTimer" to="." method="_on_TripTimer_timeout"]
